--- a/src/markdown-pages/20230920.md
+++ b/src/markdown-pages/20230920.md
@@ -6,7 +6,7 @@ title: "誕生日"
 
 昨日 34 歳になりました、もう 34 歳！？
 
-ということで、恒例に過去の誕生日記事一覧です。
+ということで、恒例の過去の誕生日記事一覧です。
 
 - [33 歳](https://kk-web.link/blog/20220923)
 - [32 歳](https://kk-web.link/blog/20210919)
