--- a/src/markdown-pages/20231125.md
+++ b/src/markdown-pages/20231125.md
@@ -252,9 +252,7 @@ Rokid Max の購入を考えている人向けの個人的な意見をば。
 
 まだ試してはいないんですが、外で使う予定がなければ Fire TV Stick でも十分な気がします。
 
-となると Rokid Max と Wireless Adapter の組み合わせになると思うのですが、ぶっちゃけ公式の Wireless Adapter はぼったくり価格です。
-
-Amazon で普通に売っている [HDMI to Type-C 変換 アダプター](https://amzn.to/47kKO77) で多分なんの問題もないんじゃないかなと。（動作未確認なのであしからず）
+となると、Amazon で普通に売っている [HDMI to Type-C 変換 アダプター](https://amzn.to/47kKO77) で接続すれば多分なんの問題もないんじゃないかなと。（動作未確認なのであしからず）
 
 <a href="https://www.amazon.co.jp/Type-C-%E3%82%B9%E3%83%9E%E3%83%BC%E3%83%88%E3%82%B0%E3%83%A9%E3%82%B9-lemorele-%E3%83%A2%E3%83%8B%E3%82%BF%E3%83%BC%E6%98%A0%E5%83%8F-switch/dp/B0C73KD27Q?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3IBSPQOTO96LE&keywords=HDMI%2Bto%2BUSB%2BType%2BC%2B%E5%A4%89%E6%8F%9B%E3%82%A2%E3%83%80%E3%83%97%E3%82%BF&qid=1700878455&s=electronics&sprefix=hdmi%2Bto%2Busb%2Btype%2Bc%2B%E5%A4%89%E6%8F%9B%E3%82%A2%E3%83%80%E3%83%97%E3%82%BF%2Celectronics%2C179&sr=1-29&th=1&linkCode=li3&tag=piro09190c-22&linkId=a794a731d46d13bd749453a877cf5de2&language=ja_JP&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0C73KD27Q&Format=_SL250_&ID=AsinImage&MarketPlace=JP&ServiceVersion=20070822&WS=1&tag=piro09190c-22&language=ja_JP" ></a><img src="https://ir-jp.amazon-adsystem.com/e/ir?t=piro09190c-22&language=ja_JP&l=li3&o=9&a=B0C73KD27Q" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
