--- a/src/markdown-pages/20240102.md
+++ b/src/markdown-pages/20240102.md
@@ -20,7 +20,7 @@ title: "あけましておめでとうございます"
 
 ---
 
-2024 年を超えられないと言われていたうちの犬ですが、なんとかギリギリで生きています。
+2024 年を迎えられないと言われていたうちの犬ですが、なんとかギリギリで生きています。
 
 食が細くなってしまい、体調もまったく芳しくなく本当に満身創痍な感じですが、なんとか毎日を乗り切っています。
 
