--- a/src/markdown-pages/20240202.md
+++ b/src/markdown-pages/20240202.md
@@ -44,7 +44,7 @@ ChatGPT が出力したコードをコピペすることが悪いわけではな
 
 ---
 
-コーディング然り、スクラム開発然り、採用然り、会社で働く以上はすべての行動に強い目的が必要です。
+コーディング然り、スクラム開発然り、採用然り、会社で働く以上はすべての行動に強い理由が必要です。
 
 自分はこのことをよく「正義感」という言葉で説明するのですが。
 
