--- a/src/markdown-pages/20200824.md
+++ b/src/markdown-pages/20200824.md
@@ -4,9 +4,7 @@ date: "2020-08-24"
 title: "キーボードアーム自作した"
 ---
 
-今自分が使っているイスがこれなんですが。
-
-<iframe style="height:240px;width:120px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=FFFFFF&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=piro09190c-22&language=ja_JP&o=9&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B01N6NPQSV&linkId=a5c579fb18cada82d83fa232ea5b55e4"></iframe>
+今自分が使っているイスが [これ](https://amzn.to/3UUYAtI) なんですが。
 
 これのワインレッド版を使っています。
 
