fix: set 25 to page size

--- a/src/markdown-pages/20200824.md
+++ b/src/markdown-pages/20200824.md
@@ -40,19 +40,9 @@ title: "キーボードアーム自作した"
 
 ---
 
-で、結局どうしたかというと、以下の組み合わせで作ることができました。
-
-<iframe style="height:240px;width:120px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=FFFFFF&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=piro09190c-22&language=ja_JP&o=9&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B0019SZZRK&linkId=4157b84dc7cb28a21d0c8ec40f09ace5"></iframe>
-
-<iframe style="height:240px;width:120px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=FFFFFF&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=piro09190c-22&language=ja_JP&o=9&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B00N2SB0N8&linkId=b7a65291ae10c4223b044a8181efe3c9"></iframe>
-
-[通常のキーボードプレートトレイと 100 × 100 ミリメートル穴コンピュータ部品](https://ja.aliexpress.com/item/33040841896.html)
-
-単純に机にノートパソコンアームを取り付けて、アームからノートパソコンスタンドを取り外してキーボードトレイを取り付けた、ただそれだけです。
+結局どうしたかというと、単純に机にノートパソコンアームを取り付けて、アームからノートパソコンスタンドを取り外してキーボードトレイを取り付けた、ただそれだけです。
 
 ただ、ノートパソコンアームのポールが長すぎたので、パイプカッターで短くカットしました。
-
-<iframe style="height:240px;width:120px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-fe.amazon-adsystem.com/e/cm?lt1=_blank&bc1=FFFFFF&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=piro09190c-22&language=ja_JP&o=9&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B00EETV5ES&linkId=20b180b309261c40f5566a05aac1abe4"></iframe>
 
 1 つ誤算だったのが、VESA 規格のサイズがノートパソコンアーム側が 75×75mm（VESA75）、キーボードトレイ側が 100×100mm（VESA100）と異なっていたので、VESA 規格変換プレートが必要だったことですね。
 
