feat: append blog

--- a/src/markdown-pages/20240227-2.md
+++ b/src/markdown-pages/20240227-2.md
@@ -123,6 +123,8 @@ SONY だけあっておしゃれなんですが、おしゃれなだけですね
 
 小さい端末ゆえに画面サイズも小さいので、むしろ 3 ボタンナビゲーションを強制させるメリットってあんまりないと思うんですが、どーなんでしょうか。
 
+追記）adb でなんとかなりました、簡単なのでパソコンがある方はぜひぜひ（[参考サイト](https://zenn.dev/okuoku/scraps/0e0662d23d98b9)）
+
 ### デフォルトアプリがいらないものばっかり
 
 Android なので Google のアプリが山程入ってます。
@@ -132,6 +134,8 @@ Google TV とか Meet とか使わんっつーの！！
 しかもアンインストールもできません、無効化が限界という。
 
 むしろこういうところカスタマイズしてほしいです。
+
+追記）こちらも adb で解決できました
 
 ---
 
