--- a/src/markdown-pages/20240427.md
+++ b/src/markdown-pages/20240427.md
@@ -51,16 +51,16 @@ title: "Next.jsでurlのルートパスを動的に切り替える方法"
 ## 前提
 
 - サーバーサイドでも `appId` を取得可能とする
-- ログイン時は `appId` を使用した認証を必須とする
+- ログイン時は認証を必須とする
 
 ## 動作フロー
 
-ex) `<Link href="/piyo">` を押下された場合
+ex) `<Link href="/fuga">` を押下された場合
 
-1. `/piyo` へ遷移しようと試みる
-2. パスに `appId` が含まれていないため、`appId` を付与して redirect させる ex) `/12345678/piyo`
+1. `/fuga` へ遷移しようと試みる
+2. パスに `appId` が含まれていないため、`appId` を付与して redirect させる ex) `/12345678/fuga`
 3. 認証を行う
-4. `/piyo` へ rewrite させる
+4. `/fuga` へ rewrite させる
 
 ## 実装感
 
