--- a/src/markdown-pages/20240522.md
+++ b/src/markdown-pages/20240522.md
@@ -1,3 +1,26 @@
+---
+slug: "/blog/20240522"
+date: "2024-05-22"
+title: "Conformを使う？React Hook Formでいけるかもよ"
+---
+
+以前 [React Hook Form を無理やり Server Action に落とし込む](https://kk-web.link/blog/20240213) という記事を書いたのですが。
+
+最近 Conform というパッケージが Server Action へ対応しており、こっちを使おうみたいな記事がちらほら見受けられます。
+
+とはいえ React Hook Form の書きっぷりと比べると結構イマイチな書きっぷりが多く、移行するのやだなーと思っていまして。
+
+改めて React Hook Form で Server Action に繋げる方法はないかと探したところ、[公式](https://react-hook-form.com/docs/useform/form) に思いっきり記載がありました。
+
+---
+
+現在ベータ版とのことですが、結構開発も進んでいるっぽく、それならばと思い本サイトのコンタクトフォームで組んでみたところ、あっさり動いてくれました。
+
+React Hook Form は公式ドキュメントがかなり丁寧に書かれているので、今更ここに書くようなこともないのですが…。
+
+せっかくなので、今回は ReCAPTCHA と Zod と Toast を組み合わせたサンプルをば。
+
+```tsx
 "use client";
 import { ErrorMessage } from "@hookform/error-message";
 import { zodResolver } from "@hookform/resolvers/zod";
@@ -266,3 +289,12 @@ export default function Contact(): JSX.Element {
     </>
   );
 }
+```
+
+サーバー側は formData から values を取得するよう修正するだけなので省略します。
+
+気になる方はリポジトリーを確認していただけると。
+
+---
+
+そんな感じです、正式リリースが今から楽しみです。
