--- a/src/markdown-pages/20240906.md
+++ b/src/markdown-pages/20240906.md
@@ -70,7 +70,7 @@ import { streamObject } from "ai";
 import { StreamableValue, createStreamableValue } from "ai/rsc";
 import { z } from "zod";
 
-type AnalyzeHashtagTrendData = Partial<{
+type GenerateData = Partial<{
   fuga: string;
 }>;
 
