--- a/src/markdown-pages/20241002.md
+++ b/src/markdown-pages/20241002.md
@@ -182,9 +182,7 @@ import { streamUI } from "ai/rsc";
 import { openai } from "@ai-sdk/openai";
 import { z } from "zod";
 
-const LoadingComponent = () => (
-  <div className="animate-pulse p-4">getting weather...</div>
-);
+const LoadingComponent = () => <div>getting weather...</div>;
 
 const getWeather = async (location: string) => {
   await new Promise((resolve) => setTimeout(resolve, 2000));
