--- a/src/markdown-pages/20241101.md
+++ b/src/markdown-pages/20241101.md
@@ -20,6 +20,33 @@ VTuberプロダクションの [ラブボックス公式サイト](https://lovve
 
 ---
 
+今回使用した主な技術やサービスは以下のとおりです。
+
+- React
+  - @tsparticles/react
+  - Day.js
+  - Framer Motion
+  - MicroCMS TypeScript SDK
+  - Nodemailer
+  - React Hook Form
+  - react-markdown
+  - pattern.css
+  - Swiper
+  - Zustand
+- Next.js
+- TypeScript
+- CSS Modules
+- Vercel
+- MicroCMS
+
+いかにも自分って感じの選定になりました、バランス感は良いような気はします。（ただし pattern.css は除く）
+
+ただ一方で ARIA や モダンな CSS、FormData 周りについてはまだまだ実力不足を痛感しました。
+
+今後はもっとモダンな知識を身につけていきたいと思います。
+
+---
+
 今回一番苦労したのはデザイン面でして。
 
 ラブボックスというプロダクション名から、当初素直にピンク基調で展開していこうと決めました。
