--- a/src/markdown-pages/20241101.md
+++ b/src/markdown-pages/20241101.md
@@ -1,7 +1,7 @@
 ---
 slug: "/blog/20241101"
 date: "2024-11-01"
-title: "VTuberプロダクションのLovveboxのサイトを作らせていただきました"
+title: "Lovveboxのサイトを作らせていただきました"
 ---
 
 VTuberプロダクションの [ラブボックス公式サイト](https://lovvebox.com/) を作らせていただきました。
