--- a/src/markdown-pages/20250411.md
+++ b/src/markdown-pages/20250411.md
@@ -4,7 +4,7 @@ date: "2025-04-11"
 title: "Mac向けのMedia Playerをリリースしました"
 ---
 
-[Mac Classic Player](https://github.com/piro0919/mac-classic-player) をリリースしました。
+[Mac Classic Player](https://mcp.kk-web.link/) をリリースしました。
 
 興味ある方はぜひぜひ。
 
