feat: update blog post title and revise content to focus on dialogue with ai

--- a/src/markdown-pages/20250418.md
+++ b/src/markdown-pages/20250418.md
@@ -1,7 +1,7 @@
 ---
 slug: "/blog/20250418"
 date: "2025-04-18"
-title: "会社は社員を守るために存在するのか"
+title: "「会社は社員を守る箱なのか？」という問いに、AIと自分に問い直してみた話"
 ---
 
 様々な会社さんとお話をしていると、いろいろと感じる部分は出てきまして。
