fix: change phrasing to “enjoy it”

--- a/src/markdown-pages/20250421.md
+++ b/src/markdown-pages/20250421.md
@@ -54,7 +54,7 @@ Atomic Design やプロトタイピングツールによるルール作りなん
 
 Linter や Formatter、テストなどはまさにその代表例ですよね。
 
-ドキュメントでガチガチに固めることを会館に覚えるヒトもいるでしょうが、それは単なるオナニーでしかないよなーと思います。
+ドキュメントでガチガチに固めることを快感に覚えるヒトもいるでしょうが、それは単なるオナニーでしかないよなーと思います。
 
 ## 将来を見据える
 
