chore: migrate site url to kkweb.io

--- a/src/markdown-pages/20181227.md
+++ b/src/markdown-pages/20181227.md
@@ -4,7 +4,7 @@ title: "react-scalable-draggable を作った"
 slug: "/blog/20181227"
 ---
 
-[react-rescalable-draggable を作ろうとしている](https://kk-web.link/blog/20181031)という記事を書いて 2 ヶ月経って、ようやく作りました。
+[react-rescalable-draggable を作ろうとしている](https://kkweb.io/blog/20181031)という記事を書いて 2 ヶ月経って、ようやく作りました。
 
 [react-scalable-draggable](https://github.com/piro0919/react-scalable-draggable)
 
