--- a/src/markdown-pages/20190828.md
+++ b/src/markdown-pages/20190828.md
@@ -4,9 +4,9 @@ title: "レジュメイク リリースしました"
 slug: "/blog/20190828"
 ---
 
-[レジュメイク](https://resumake.kk-web.link/)
+[レジュメイク](https://resumake.kkweb.io/)
 
-エンジニア向け、オンラインスキルシートビルダーです、[こんなの](https://kk-web.link/about/resume/)が作れるようになります。
+エンジニア向け、オンラインスキルシートビルダーです、[こんなの](https://kkweb.io/about/resume/)が作れるようになります。
 
 フォーマットは[レバテックが公開しているやつ](https://freelance.levtech.jp/consulting/detail/14/)です。
 
