--- a/src/markdown-pages/20191012.md
+++ b/src/markdown-pages/20191012.md
@@ -4,7 +4,7 @@ title: "Reactを3年間使ってきた所感"
 slug: "/blog/20191012"
 ---
 
-ふと過去のブログを漁っていると、去年[こんなエントリ](https://kk-web.link/blog/20180929)を書いてました。
+ふと過去のブログを漁っていると、去年[こんなエントリ](https://kkweb.io/blog/20180929)を書いてました。
 
 読み返してみたところ、鋭いことを書いている部分もあり、間違ったことを書いている部分もあり、でもまぁ、2 年触ったくらいならこんなもんだよなーと。
 
