--- a/src/markdown-pages/20191218.md
+++ b/src/markdown-pages/20191218.md
@@ -18,7 +18,7 @@ slug: "/blog/20191218"
 
 > リクエスト時にサーバ側で最低限（ファーストビューや SEO 用の部分）レンダリングし、それ以降をクライアント側でレンダリングする（SSR と CSR）
 
-なので、[以前書いた記事](https://kk-web.link/blog/20191112)のような描画が行われるわけですね。
+なので、[以前書いた記事](https://kkweb.io/blog/20191112)のような描画が行われるわけですね。
 
 サーバサイドレンダリング(以下 SSR)とは、あくまでファーストビューを高速化する目的や、Twitter や Facebook などの SEO 対策として行うに過ぎないというイメージです。
 
