--- a/src/markdown-pages/20200312.md
+++ b/src/markdown-pages/20200312.md
@@ -10,7 +10,7 @@ slug: "/blog/20200312"
 
 ---
 
-1 月に[こんな記事](https://kk-web.link/blog/20200117)を書きました。
+1 月に[こんな記事](https://kkweb.io/blog/20200117)を書きました。
 
 そこから 2 月に入り、犬の手術は行われるわ、自身の仕事も決まるわ、新しい案件も突然始まるわでむちゃくちゃバタバタしていました。
 
