--- a/src/markdown-pages/20200714.md
+++ b/src/markdown-pages/20200714.md
@@ -4,7 +4,7 @@ date: "2020-07-14"
 title: "レシグル リリースしました"
 ---
 
-[レシグル](https://recigle.kk-web.link/)
+[レシグル](https://recigle.kkweb.io/)
 
 普段からちょくちょく料理をするのですが。
 
