--- a/src/markdown-pages/20200801.md
+++ b/src/markdown-pages/20200801.md
@@ -97,7 +97,7 @@ title: "9 月から働ける現場を探しています"
 
 ## 経歴
 
-[スキルシート](https://kk-web.link/about/resume)をご確認ください。
+[スキルシート](https://kkweb.io/about/resume)をご確認ください。
 
 ## 備考
 
