--- a/src/markdown-pages/20200804.md
+++ b/src/markdown-pages/20200804.md
@@ -8,8 +8,8 @@ title: "React を 4 年間使ってきた所感"
 
 過去のやつも一応リンクをば。
 
-- [React を 3 年間使ってきた所感](https://kk-web.link/blog/20191012)
-- [React を 2 年間使ってきた所感](https://kk-web.link/blog/20180929)
+- [React を 3 年間使ってきた所感](https://kkweb.io/blog/20191012)
+- [React を 2 年間使ってきた所感](https://kkweb.io/blog/20180929)
 
 React に対する感じ方は「React を 3 年間使ってきた所感」から特に変わっていないので、今回は切り口を少し変えてみようと思います。
 
