--- a/src/markdown-pages/20200820.md
+++ b/src/markdown-pages/20200820.md
@@ -4,7 +4,7 @@ date: "2020-08-20"
 title: "ホロライブのライブ配信一覧を取得するサービスを作りました"
 ---
 
-[ホロライフ！](https://hololife.kk-web.link/)
+[ホロライフ！](https://hololife.kkweb.io/)
 
 チャンネル登録するほどでもないけれど、たまーに配信を見たいときがあるので作ってみました。
 
