--- a/src/markdown-pages/20200907.md
+++ b/src/markdown-pages/20200907.md
@@ -4,7 +4,7 @@ date: "2020-09-07"
 title: "ホロライフ！モバイルに対応しました"
 ---
 
-遅ればせながら [ホロライフ！](https://hololife.kk-web.link/) のモバイル対応を行いました。
+遅ればせながら [ホロライフ！](https://hololife.kkweb.io/) のモバイル対応を行いました。
 
 ちょっとデザインが甘いのと、パフォーマンスがアレなので暇なときに直していこうと思っています。
 
