--- a/src/markdown-pages/20201124.md
+++ b/src/markdown-pages/20201124.md
@@ -8,7 +8,7 @@ Android の広告ブロッカーって色んな手段があると思うのです
 
 自分は昔から DNS66 を使っていて、今も Pixel 3a では DNS66 を導入しています。
 
-で、この前 [OUKITEL K9 を買った](https://kk-web.link/blog/20201009) という記事を書いたのですが。
+で、この前 [OUKITEL K9 を買った](https://kkweb.io/blog/20201009) という記事を書いたのですが。
 
 この端末も例にもれず DNS66 を導入していたんですよね。
 
