--- a/src/markdown-pages/20201130.md
+++ b/src/markdown-pages/20201130.md
@@ -6,7 +6,7 @@ title: "React npm 作ってみました"
 
 前々から作りたいな―と思っていた Web サービスのアイデアがあったのですが、今回重い腰を上げてサクサクっと作ってみました。
 
-[React npm](https://react-npm.kk-web.link/)
+[React npm](https://react-npm.kkweb.io/)
 
 React を使い始めてぼちぼち 4 年が経つのですが、仕事と趣味でかなりの数の npm パッケージを触ってきました。
 
