--- a/src/markdown-pages/20201204-2.md
+++ b/src/markdown-pages/20201204-2.md
@@ -6,7 +6,7 @@ title: "せりふや 公開してました"
 
 数日前に新しい Web サービスを公開してました。
 
-[せりふや](https://serifuya.kk-web.link/)
+[せりふや](https://serifuya.kkweb.io/)
 
 まだベータ版くらいの完成度ですが、ひとまず公開だけしちゃいました。
 
