--- a/src/markdown-pages/20201220.md
+++ b/src/markdown-pages/20201220.md
@@ -4,7 +4,7 @@ date: "2020-12-20"
 title: "限界しりとりパーティー！用のタイマーアプリを作ってみました"
 ---
 
-[限界しりとりタイマー](https://siritori-timer.kk-web.link/)
+[限界しりとりタイマー](https://siritori-timer.kkweb.io/)
 
 オモコロチャンネルが [限界しりとりパーティー！](https://amzn.to/3nEVlDa) というボードゲームで遊んでいまして。
 
