--- a/src/markdown-pages/20201225.md
+++ b/src/markdown-pages/20201225.md
@@ -39,7 +39,7 @@ Apple 製品の PWA の仕様って結構意味不明でして…せめてフラ
 | `isPwa`                      | `boolean`               | PWA として動作している場合 `true` を返します。                                              |
 | `userChoice`                 | `object` or `undefined` | 普段は `undefined` を返し、 `handleClickOnInstallPrompt` が実行されると実行結果を返します。 |
 
-[デモサイト](https://use-pwa.kk-web.link/) も公開していますので、お気軽に確認して頂ければと。
+[デモサイト](https://use-pwa.kkweb.io/) も公開していますので、お気軽に確認して頂ければと。
 
 ---
 
