--- a/src/markdown-pages/20210118-1.md
+++ b/src/markdown-pages/20210118-1.md
@@ -4,7 +4,7 @@ date: "2021-01-18"
 title: "2020 年 Amazon 以外で買って良かったもの"
 ---
 
-昨年末に [2020 年 Amazon で買った本当に良かったもの](https://kk-web.link/blog/20201219) という記事を書きましたが。
+昨年末に [2020 年 Amazon で買った本当に良かったもの](https://kkweb.io/blog/20201219) という記事を書きましたが。
 
 今回は Amazon 以外の Web サイトで購入してよかったものを書いていこうと思います。
 
