--- a/src/markdown-pages/20210530.md
+++ b/src/markdown-pages/20210530.md
@@ -4,7 +4,7 @@ date: "2021-05-30"
 title: "オーダーメイド枕を使ってみた感想"
 ---
 
-以前 [オーダーメイド枕を買ってみた](https://kk-web.link/blog/20210515) という記事を書きました。
+以前 [オーダーメイド枕を買ってみた](https://kkweb.io/blog/20210515) という記事を書きました。
 
 それから 2 週間ちかく経ったので、実際に使用してみた感想を書いていこうと思います
 
