--- a/src/markdown-pages/20210725.md
+++ b/src/markdown-pages/20210725.md
@@ -6,7 +6,7 @@ title: "レシグルをアップデートしました"
 
 連休を使ってレシグルのアップデートを行いました。
 
-[レシグル](https://recigle.kk-web.link/)
+[レシグル](https://recigle.kkweb.io/)
 
 前のバージョンよりはるかに使いやすくなっていると思いますので、ぜひ使っていただけると嬉しいです。
 
@@ -36,7 +36,7 @@ A2HS については [React-iOS-PWA-prompt](https://www.npmjs.com/package/react-
 
 なんとなくマルチリージョンに対応したくなったので、英語版も作ってみました。
 
-[Recigle](https://recigle.kk-web.link/en)
+[Recigle](https://recigle.kkweb.io/en)
 
 定石通り [next-i18next](https://github.com/isaachinman/next-i18next) で対応を行いました。
 
