--- a/src/markdown-pages/20210803.md
+++ b/src/markdown-pages/20210803.md
@@ -6,9 +6,9 @@ title: "React を 5 年間使ってきた所感"
 
 毎年恒例のシリーズです。
 
-- [React を 4 年間使ってきた所感](https://kk-web.link/blog/20200804)
-- [React を 3 年間使ってきた所感](https://kk-web.link/blog/20191012)
-- [React を 2 年間使ってきた所感](https://kk-web.link/blog/20180929)
+- [React を 4 年間使ってきた所感](https://kkweb.io/blog/20200804)
+- [React を 3 年間使ってきた所感](https://kkweb.io/blog/20191012)
+- [React を 2 年間使ってきた所感](https://kkweb.io/blog/20180929)
 
 だらだらーっと書いていこうと思います。
 
