--- a/src/markdown-pages/20210806.md
+++ b/src/markdown-pages/20210806.md
@@ -6,7 +6,7 @@ title: "おんめも リリースしました"
 
 前からオンラインメモ帳がほしいなーと思っていたので作ってみました。
 
-[おんめも](https://on-memo.kk-web.link/)
+[おんめも](https://on-memo.kkweb.io/)
 
 アカウント 1 つで複数の端末でメモ帳が共有できるサービスです。
 
