--- a/src/markdown-pages/20210913.md
+++ b/src/markdown-pages/20210913.md
@@ -58,7 +58,7 @@ title: "犬の寿命が1000日伸びる薬"
 
 で、おそらくこの薬を飲んでいなければとっくの昔に亡くなっていたと思われます。
 
-[去年の 1 月の段階でで余命 1 年ない宣告を受けていた](https://kk-web.link/blog/20200117) ので、それを考えると薬の進歩はエグいなぁと…。
+[去年の 1 月の段階でで余命 1 年ない宣告を受けていた](https://kkweb.io/blog/20200117) ので、それを考えると薬の進歩はエグいなぁと…。
 
 ということで、薬物療法も全然アリな時代に入っているんだなぁと自分の考えを改めた最近でした。
 
