--- a/src/markdown-pages/20210926.md
+++ b/src/markdown-pages/20210926.md
@@ -4,7 +4,7 @@ date: "2021-09-26"
 title: "オモコロ&デイリーポータルＺ非公式リーダーを作りました"
 ---
 
-[オモコロ&デイリーポータルＺ非公式リーダー](https://omocoro-daily.kk-web.link/)
+[オモコロ&デイリーポータルＺ非公式リーダー](https://omocoro-daily.kkweb.io/)
 
 スクレイピングの練習がてら、なんとなく作ってみました。
 
