--- a/src/markdown-pages/20211010.md
+++ b/src/markdown-pages/20211010.md
@@ -44,7 +44,7 @@ DAZN とか契約している層のほうが明らかに少ないと思います
 
 ## テレビが見れなくなった
 
-本ブログで人気がある記事の 1 つに[Fire TV でテレビを見る方法](https://kk-web.link/blog/20210424)というのがありまして。
+本ブログで人気がある記事の 1 つに[Fire TV でテレビを見る方法](https://kkweb.io/blog/20210424)というのがありまして。
 
 [Xit Wireless](https://amzn.to/3DxddYt) というアプリを使って Fire TV 上でテレビを見る方法について記述しました。
 
