--- a/src/markdown-pages/20211026.md
+++ b/src/markdown-pages/20211026.md
@@ -6,6 +6,6 @@ title: "はじめしゃちょーの畑の非公式ファンサイトを作って
 
 作ってみました。
 
-[はじめしゃちょーの畑 非公式ファンサイト](https://hatake.kk-web.link/)
+[はじめしゃちょーの畑 非公式ファンサイト](https://hatake.kkweb.io/)
 
 [リポジトリ](https://github.com/piro0919/hatake2) も公開しています。
