--- a/src/markdown-pages/20211027-2.md
+++ b/src/markdown-pages/20211027-2.md
@@ -10,7 +10,7 @@ pattern.css というパッケージが便利だったので紹介をば。
 
 タイルとかストライプ系の背景をさくっと当てられるようになります。
 
-[はじめしゃちょーの畑のサイト](https://hatake.kk-web.link/) で使ってみましたが。
+[はじめしゃちょーの畑のサイト](https://hatake.kkweb.io/) で使ってみましたが。
 
 細かい調整は効かない分、かなりシンプルな実装で実現できちゃいます。
 
