--- a/src/markdown-pages/20211128-2.md
+++ b/src/markdown-pages/20211128-2.md
@@ -4,7 +4,7 @@ date: "2021-11-28"
 title: "ADHD・ASDの妻とカサンドラな自分"
 ---
 
-本ブログでアクセスが多い記事の 1 つに [ADHD の妻の WAIS-IV の結果が返ってきた](https://kk-web.link/blog/20210531) というのがあります。
+本ブログでアクセスが多い記事の 1 つに [ADHD の妻の WAIS-IV の結果が返ってきた](https://kkweb.io/blog/20210531) というのがあります。
 
 WAIS について調べている人がこの記事を読んでいるみたいです。
 
