--- a/src/markdown-pages/20211128.md
+++ b/src/markdown-pages/20211128.md
@@ -4,7 +4,7 @@ date: "2021-11-28"
 title: "【OpenAPI Generator】GitHubからファイルをダウンロードせずにAPIクライアントを生成する方法"
 ---
 
-今月頭に[GitHub からファイルをダウンロードする方法](https://kk-web.link/blog/20211104)という記事を書いたのですが、そもそもダウンロードすら不要だったので改めて書いていこうと思います。
+今月頭に[GitHub からファイルをダウンロードする方法](https://kkweb.io/blog/20211104)という記事を書いたのですが、そもそもダウンロードすら不要だったので改めて書いていこうと思います。
 
 ---
 
