--- a/src/markdown-pages/20211203.md
+++ b/src/markdown-pages/20211203.md
@@ -6,7 +6,7 @@ title: "2021年下半期 買ってよかったもの"
 
 2021 年もぼちぼち終わるということで、下半期に買ってよかったものを書いていこうと思います。
 
-ちなみに [上半期版](https://kk-web.link/blog/20210619) もありますので、あわせてどうぞ。
+ちなみに [上半期版](https://kkweb.io/blog/20210619) もありますので、あわせてどうぞ。
 
 ---
 
@@ -46,7 +46,7 @@ title: "2021年下半期 買ってよかったもの"
 
 1 人ぐらしでも全然買っていいレベルだと思います、自炊を行う気持ちが少し前向きになれると思います。
 
-ちなみに [食洗機のレビュー記事](https://kk-web.link/blog/20210710) もぜひぜひ。
+ちなみに [食洗機のレビュー記事](https://kkweb.io/blog/20210710) もぜひぜひ。
 
 ## [パナソニック IH クッキングヒーター IH コンロ 卓上 KZ-PH33-K](https://amzn.to/32NSKRT)
 
