--- a/src/markdown-pages/20220106.md
+++ b/src/markdown-pages/20220106.md
@@ -12,7 +12,7 @@ title: "オモコロのアーカイブサイトをリリースしました"
 
 オモコロのアーカイブサイトを作ってみました。
 
-[オモコロアーカイブ](https://omocoro-archive.kk-web.link/)
+[オモコロアーカイブ](https://omocoro-archive.kkweb.io/)
 
 PWA 対応も行っていますので、お気軽にインストールして使ってもらえると嬉しいです。
 
