--- a/src/markdown-pages/20220427-2.md
+++ b/src/markdown-pages/20220427-2.md
@@ -4,7 +4,7 @@ date: "2022-04-27"
 title: "【Next.js】SSR環境でやっちゃダメなこと【Day.js】"
 ---
 
-[前回の記事](https://kk-web.link/blog/20220427) で SSR 時における Day.js の挙動を調べてみました。
+[前回の記事](https://kkweb.io/blog/20220427) で SSR 時における Day.js の挙動を調べてみました。
 
 ということで前回の記事を読めばわかる方はわかると思いますが、SSR 環境下で書いてはいけない書きっぷりがいくつかあるのでざくっと書いていこうと思います。
 
