--- a/src/markdown-pages/20220530.md
+++ b/src/markdown-pages/20220530.md
@@ -4,7 +4,7 @@ date: "2022-05-30"
 title: "りくばん！をリリースしました"
 ---
 
-[りくばん！](http://recban.kk-web.link/) をリリースしました。
+[りくばん！](http://recban.kkweb.io/) をリリースしました。
 
 バンドメンバーの募集と応募を行うことができる Web サービスとなっています。
 
