--- a/src/markdown-pages/20220608.md
+++ b/src/markdown-pages/20220608.md
@@ -4,7 +4,7 @@ date: "2022-06-08"
 title: "Reactのコンポーネントの型のつけ方"
 ---
 
-以前 [こういう記事](https://kk-web.link/blog/20201023) を書いたのですが。
+以前 [こういう記事](https://kkweb.io/blog/20201023) を書いたのですが。
 
 今、というか結構前からコンポーネントへの型のつけ方を変えていたので、改めて紹介をば。
 
