--- a/src/markdown-pages/20220808.md
+++ b/src/markdown-pages/20220808.md
@@ -4,7 +4,7 @@ date: "2022-08-08"
 title: "調子を管理するWebアプリをリリースしました"
 ---
 
-[たいちょ](https://taicho.kk-web.link/)
+[たいちょ](https://taicho.kkweb.io/)
 
 毎日の調子を入力して確認することができるだけの Web アプリです。
 
