--- a/src/markdown-pages/20220818.md
+++ b/src/markdown-pages/20220818.md
@@ -6,7 +6,7 @@ title: "うちの犬が17歳になりました"
 
 うちの犬が無事 17 歳の誕生日を迎えることができました。
 
-2 年半前に [うちの犬の余命はあと 1 年ないくらい](https://kk-web.link/blog/20200117) という記事を書いていたのですが、まさかここまで生きてくれるとは、良い意味で予想だにしていませんでした。
+2 年半前に [うちの犬の余命はあと 1 年ないくらい](https://kkweb.io/blog/20200117) という記事を書いていたのですが、まさかここまで生きてくれるとは、良い意味で予想だにしていませんでした。
 
 この 1 年は流石に少しずつ弱ってきており、心臓の状態も決して良くなく、ゴホゴホというセキも増えてきたのですが。
 
