--- a/src/markdown-pages/20220916.md
+++ b/src/markdown-pages/20220916.md
@@ -4,7 +4,7 @@ date: "2022-09-16"
 title: "限界しりとりタイマーをアップデートしました"
 ---
 
-[限界しりとりタイマー](https://siritori-timer.kk-web.link/)
+[限界しりとりタイマー](https://siritori-timer.kkweb.io/)
 
 とくになにがあったわけでもないですが、1 から作り直してみました。
 
