--- a/src/markdown-pages/20221129.md
+++ b/src/markdown-pages/20221129.md
@@ -4,7 +4,7 @@ date: "2022-11-29"
 title: "Pixel5a(5G)からPixel6aに機種変更した"
 ---
 
-[今年の春に Pixel3a から Pixel5a(5G) に機種変更](https://kk-web.link/blog/20220429)しました。
+[今年の春に Pixel3a から Pixel5a(5G) に機種変更](https://kkweb.io/blog/20220429)しました。
 
 で、今回早々に Pixel6a へ機種変更しました。
 
