--- a/src/markdown-pages/20221201.md
+++ b/src/markdown-pages/20221201.md
@@ -4,7 +4,7 @@ date: "2022-12-01"
 title: "Reactで開発する際のコツ"
 ---
 
-[フロントエンド開発レッスン](https://kk-web.link/lesson) 絶賛やってます。
+[フロントエンド開発レッスン](https://kkweb.io/lesson) 絶賛やってます。
 
 まだまだメンバー募集中ですので、本当にお気軽にー。
 
