--- a/src/markdown-pages/20230303.md
+++ b/src/markdown-pages/20230303.md
@@ -4,7 +4,7 @@ date: "2023-03-03"
 title: "オンライン版プランニングポーカーをリリースしました"
 ---
 
-[Planning Poker](https://planning-poker.kk-web.link/)
+[Planning Poker](https://planning-poker.kkweb.io/)
 
 オンライン版プランニングポーカーをリリースしました。
 
