--- a/src/markdown-pages/20240225.md
+++ b/src/markdown-pages/20240225.md
@@ -6,7 +6,7 @@ title: "最新の Fire TV Stick でテレビを見る方法"
 
 本ブログでも過去何度か Fire TV Stick でテレビを見る方法を書いてきました。
 
-[Fire TV でテレビを見る方法](https://kk-web.link/blog/20210424)
+[Fire TV でテレビを見る方法](https://kkweb.io/blog/20210424)
 
 が、過去の記事では最新の Fire TV Stick で見る方法は見当たらない、で記事を終えていたんですよね。
 
