--- a/src/markdown-pages/20240320.md
+++ b/src/markdown-pages/20240320.md
@@ -4,7 +4,7 @@ date: "2024-03-20"
 title: "短歌の投稿サービスをリリースしました"
 ---
 
-[かんたんか](https://kantanka.kk-web.link)
+[かんたんか](https://kantanka.kkweb.io)
 
 めっちゃシンプルな短歌の投稿サービスを作ってみました。
 
