--- a/src/markdown-pages/20240504.md
+++ b/src/markdown-pages/20240504.md
@@ -6,7 +6,7 @@ title: "M3 ProのMacBook Proを買いました"
 
 なんとなく MacBook を買い替えました。
 
-[過去の記事](https://kk-web.link/blog/20220204-2) によると、今まで使っていたMacBook は 2020 年の 11 月に購入していたっぽいので、3 年半くらい使ったんですね。
+[過去の記事](https://kkweb.io/blog/20220204-2) によると、今まで使っていたMacBook は 2020 年の 11 月に購入していたっぽいので、3 年半くらい使ったんですね。
 
 今回は以下のスペックで購入しました。
 
