--- a/src/markdown-pages/20240522.md
+++ b/src/markdown-pages/20240522.md
@@ -4,7 +4,7 @@ date: "2024-05-22"
 title: "Conformを使う？React Hook Formでいけるかもよ"
 ---
 
-以前 [React Hook Form を無理やり Server Action に落とし込む](https://kk-web.link/blog/20240213) という記事を書いたのですが。
+以前 [React Hook Form を無理やり Server Action に落とし込む](https://kkweb.io/blog/20240213) という記事を書いたのですが。
 
 最近 Conform というパッケージが Server Action へ対応しており、こっちを使おうみたいな記事がちらほら見受けられます。
 
