--- a/src/markdown-pages/20241227.md
+++ b/src/markdown-pages/20241227.md
@@ -4,7 +4,7 @@ date: "2024-12-27"
 title: "オモコロのアーカイブサイトをリニューアルしました"
 ---
 
-[オモコロアーカイブ](https://omocoro-archive.kk-web.link/)をリニューアルしました。
+[オモコロアーカイブ](https://omocoro-archive.kkweb.io/)をリニューアルしました。
 
 [リポジトリ](https://github.com/piro0919/omocoro-archive2)も公開しています。
 
