--- a/src/markdown-pages/20250321.md
+++ b/src/markdown-pages/20250321.md
@@ -4,7 +4,7 @@ date: "2025-03-21"
 title: "YouTube Growthというサービスをリリースしました"
 ---
 
-[YouTube Growth](https://youtube-growth.kk-web.link/)
+[YouTube Growth](https://youtube-growth.kkweb.io/)
 
 ざっくり説明すると、YouTube チャンネルを解析し得られた解析データを AI に噛ませアドバイスを取得するというサービスです。
 
