--- a/src/markdown-pages/20250415.md
+++ b/src/markdown-pages/20250415.md
@@ -4,7 +4,7 @@ date: "2025-04-15"
 title: "オルタナティブClipyをリリースしました"
 ---
 
-[Macopy](https://macopy.kk-web.link/) をリリースしました。
+[Macopy](https://macopy.kkweb.io/) をリリースしました。
 
 興味ある方はぜひぜひ。
 
