--- a/src/markdown-pages/20200409.md
+++ b/src/markdown-pages/20200409.md
@@ -72,7 +72,7 @@ Twitter に[簡単な募集要項](https://twitter.com/piro9190/status/124791504
 
 ## 職歴、その他
 
-[スキルシート](https://kk-web.link/about/resume/)をご覧ください。
+[スキルシート](https://kkweb.io/about/resume/)をご覧ください。
 
 ---
 
