feat: add blog post on languages that will survive the next decade for english

--- a/src/markdown-pages/ja/20250519.md
+++ b/src/markdown-pages/ja/20250519.md
@@ -4,7 +4,7 @@ date: "2025-05-19"
 title: "今後10年で生き残る言語・選ばれない言語まとめ"
 ---
 
-これから学ぶべきプログラミング言語なんて大層なタイトルにしましたが。
+これから生き残るプログラミング言語なんて大層なタイトルにしましたが。
 
 こういう言語紹介系の記事って大体企業系が公開している印象があって『ほんまかぁ？』みたいな印象を受けるのって自分だけですかね？
 
